--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,12 @@ dependencies:
   yaru: ^1.2.1
   yaru_icons: ^2.3.0
   yaru_widgets: ^3.4.0
+
   http: ^1.2.0
   cached_network_image: ^3.3.1
   flutter_inappwebview: ^5.8.0
-  table_calendar: ^3.1.0
+  table_calendar: ^3.0.9
+  ubuntu_widgets: ^0.3.2
 
 dev_dependencies:
   flutter_test:
