--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^1.2.0
   cached_network_image: ^3.3.1
   flutter_inappwebview: ^5.8.0
+  intl: ^0.18.0
   table_calendar: ^3.0.9
   ubuntu_widgets: ^0.3.2
 
