--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   table_calendar: ^3.0.9
   ubuntu_widgets: ^0.3.2
   shared_preferences: ^2.2.2
+  flutter_pdfview: ^1.2.7
+  path_provider: ^2.1.2
+
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/terms_of_use.pdf
+    - assets/images/demo.pdf
 
 
 
