--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
 
   http: ^1.2.0
   cached_network_image: ^3.3.1
-  flutter_inappwebview: ^5.8.0
   intl: ^0.18.0
   table_calendar: ^3.0.9
   ubuntu_widgets: ^0.3.2
@@ -38,6 +37,7 @@ dependencies:
   flutter_pdfview: ^1.2.7
   path_provider: ^2.1.2
   flutter_launcher_icons: ^0.13.1
+  webview_flutter: ^4.7.0
 
 
 
