--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   flutter_pdfview: ^1.2.7
   path_provider: ^2.1.2
   flutter_launcher_icons: ^0.13.1
-  webview_flutter: ^4.7.0
+#  webview_flutter: ^4.7.0
+  flutter_inappwebview: ^5.8.0
+
 
 
 
