--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,17 +46,17 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23
-        targetSdkVersion 34
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        targetSdkVersion 35
+        versionCode 4
+        versionName "1.0.2"
     }
 
     signingConfigs {
         release {
-            storeFile file('../keystore/upload-keystore.jks')
+            storeFile file('../keystore/hansin.jks')
             storePassword file('../keystore/keystore.password').text.trim()
             keyPassword file('../keystore/keystore.password').text.trim()
-            keyAlias 'hansin_release'
+            keyAlias 'hansin-release'
         }
     }
 
